fixed code snippets overflowing

--- a/hugo/assets/sass/_base.scss
+++ b/hugo/assets/sass/_base.scss
@@ -83,6 +83,7 @@ a {
   color: $color-highlight;
   text-decoration: none;
   font-family: $font-family-regular;
+  word-break: break-all;
   &:hover {
     color: $color-highlight;
     text-decoration: underline;
@@ -338,11 +339,33 @@ a.btn {
       margin: 100px auto 4rem;
     }
   }
-  pre {
-    &> code {
-      overflow: auto;
-    }
-  }
+}
+code {
+  background: #eee;
+  color: #747474;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 80%;
+  line-height: 1;
+  padding: 5px 7px;
+  position: relative;
+  top: -2px;
+  border: 0;
+  cursor: pointer;
+}
+code + span.copy-to-clipboard {
+  display: none;
+}
+
+code.hljs {
+  line-height: 1.3;
+}
+code.hljs + span.copy-to-clipboard {
+  display: initial;
+}
+code, pre > code {
+  white-space: inherit !important;
+  overflow: auto;
 }
 
 // #body-inner .title, .subtitle {
